# CameraView

./: CMakeLists.txt  CameraView.sln  build.bat
CameraView/: App.xaml  CameraView.csproj  CameraView.sln  MainWindow.xaml  MainWindow.xaml.cs  NativeHost.cs  NativeMethods.cs  SdlPlayer.cs  Settings.cs  Win32ListBoxHost.cs
CameraView/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Player/: CMakeLists.txt  Player.vcxproj  analysiser.h  common.h  ffmpeg-inc.h  ffmpeg.cpp  ffmpeg.h  image-merger.cpp  image-merger.h  log.h  multi-player.cpp  multi-player.h  mysdl.cpp  mysdl.h  path-helper.h  player.cpp  player.h  recorder.cpp  recorder.h  scaler.cpp  scaler.h  schedule-manager.cpp  schedule-manager.h  schedule.cpp  schedule.h  sdl-player.cpp  sdl-player.h  sdl-wndow.cpp  stream.cpp  stream.h  string-util.h  test.cpp  thread.h  time-helper.h
TestPlayer/: CMakeLists.txt  TestPlayer.vcxproj  main.cpp
